--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <SpaRoot>ClientApp\</SpaRoot>
@@ -8,14 +8,41 @@
         <SpaProxyServerUrl>https://localhost:3000</SpaProxyServerUrl>
         <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <LangVersion>13</LangVersion>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="8.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.11" />
+        <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="Blazorise.Markdown" Version="1.4.2" />
+        <PackageReference Include="Markdig" Version="0.34.0" />
+        <PackageReference Include="MudBlazor" Version="8.0.0-preview.4" />
+        <PackageReference Include="MudBlazor.Markdown" Version="0.1.3" />
+        <PackageReference Include="SkiaSharp" Version="2.88.8" />
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.8" />
+        <PackageReference Include="Sqids" Version="3.1.0" />
+        <PackageReference Include="SQLitePCLRaw.bundle_e_sqlcipher" Version="2.1.10" />
+        <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.10" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.1" />
+        <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
     </ItemGroup>
     <ItemGroup>
         <Content Remove="$(SpaRoot)**"/>
         <None Remove="$(SpaRoot)**"/>
         <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**"/>
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Blog.Database\Blog.Database.csproj" />
+      <ProjectReference Include="..\Blog.DTO\Blog.DTO.csproj" />
+      <ProjectReference Include="..\Blog.Services\Blog.Services.csproj" />
+      <ProjectReference Include="..\Blog.Utilities\Blog.Utilities.csproj" />
     </ItemGroup>
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
         <Exec Command="node --version" ContinueOnError="true">
