--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ImageDirectoryPath": "REPLACE_ME",
+  "DatabaseSource": "REPLACE_ME",
+  "PortNumber": "REPLACE_ME",
+  "BaseUrl": "REPLACE_ME",
+  "Auth0": {
+    "Domain": "REPLACE_ME",
+    "ClientId": "REPLACE_ME"
+  }
 }
